@@ -52,6 +52,8 @@
 * Fix bug introduced in 3.6.0-beta.1 where the JavaScript POINTS global variable was an ever-growing list of strings added to at each run of the script
 * Configure both database and common Jackson Object Mappers to not fail when de-serializing JSON with extra unused fields
 * Supply the terminated Data Point VO in DataPointListener.terminate method to determine if the point is stopped by the data source or was disabled and the source is still running
+* Fix bug in Change and NoChange event detectors to prevent them raising events with timestamps in the future
+* Fix bug where Change and NoChange event detectors could be initialized to wait too long for the first change/no change event 
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
